# un-bench-eda

./: .gitignore  CLAUDE.md  Dockerfile  ENGINEERING_NOTEBOOK.md  Makefile  README.md  analyze_revisions.py  build_trajectory.py  collect_multiple_sessions.sh  docker-compose.yml  download_metadata_html.py  download_pdfs.py  example_trace.py  fetch_metadata.py  parse_agenda.py  parse_committee_report_pdf.py  parse_draft.py  parse_draft_pdf.py  parse_meeting_pdf.py  parse_metadata.py  parse_metadata_html.py  parse_resolution_pdf.py  pyproject.toml  resolution_segmentation.py  run_pipeline.sh  setup_data_structure.py  test_pipeline.sh  test_working_api.py  trace_genealogy.py
db/: __init__.py  config.py  models.py  setup_db.py  utils.py
docs/: DATABASE_PLAN.md  ETL_PLAN.md  MEETING_UTTERANCES.md  README_DATABASE.md  SCHEMA_DESIGN.md  TODO_UI.md  etl.md  gym.md  new_scrape_plan.md  project.md  prompt_management.md  rag_enhancement_plan.md  training_eval.md  un_document_structure.md
etl/: __init__.py  base.py  collect_multiple_sessions.sh  load_committee_meetings.py  load_documents.py  load_meetings.py  load_resolutions.py  run_etl.py  validate_etl.py
rag/: README_TESTING.md  __init__.py  batch_test.py  compare_results.py  conversation_manager.py  prompt_config.py  prompt_config.yaml  prompt_registry.py  rag_qa.py  rag_summarize.py  test_queries.yaml  test_rag_queries.py  text_to_sql.py
scripts/: load_all_pdfs.py  populate_meeting_text.py  run_pipeline.sh  sample_queries.py  seed_dev_db.py  setup_data_structure.py  setup_db.py  sync_to_supabase.sh  tail_multistep_logs.sh  update_body_text.py  upload_db.sh  validate_db.py  verify_supabase.py
tests/: conftest.py  test_docs_build.py
training/: train_irl.py  train_world_model.py
ui/: app.py
un_gym/: __init__.py  data_adapter.py  dynamics.py  (+6 more)
(+83 files in other folders)
