[project]
name = "un-draft"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "pdfplumber>=0.11.8",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.35",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.0.0",
    "fastapi>=0.115.5",
    "uvicorn>=0.31.1",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.20",
    "openai>=1.0.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
