[project]
name = "un-draft"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # Core dependencies (always installed)
    # Web framework
    "fastapi>=0.115.5",
    "uvicorn>=0.31.1",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.20",
    # Database
    "sqlalchemy>=2.0.35",
    "psycopg2-binary>=2.9.10",
    # HTTP & parsing
    "beautifulsoup4>=4.14.2",
    "requests>=2.32.5",
    # AI/ML (for RAG)
    "openai>=1.0.0",
    # Utilities
    "python-dotenv>=1.0.0",
    "numpy>=1.26.0",
    "matplotlib>=3.7.0",
    "rich>=13.0.0",
    "jitter>=0.1.18",
    "jiter>=0.12.0",
    "pyyaml>=6.0.0",
]

[dependency-groups]
# PDF parsing for ETL (requires system libs: gcc, libpq-dev)
etl = [
    "pdfplumber>=0.11.8",
]

# PyTorch for training (very heavy, ~900MB)
training = [
    "torch>=2.9.1",
]

# Development tools
dev = [
    "ipykernel>=7.1.0",
    "markdown-it-py>=3.0.0",
    "pytest>=7.4.0",
]

# Documentation
docs = [
    "myst-parser",
    "markdown-it-py>=3.0.0",
    "sphinx",
    "sphinx-autobuild",
    "sphinx-rtd-theme",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
